--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -17,6 +17,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
+    "nodemon": "^3.1.7",
+    "react-hot-toast": "^2.4.1",
     "socket.io": "^4.7.4"
   }
 }
